--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,12 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "node",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "declaration": true,
-    "outDir": "./dist",
-    "rootDir": "./",
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "outDir": "./dist/esm"
   },
   "include": [
     "*.ts",
     "*.js"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
   ]
 }
