--- a/package.json
+++ b/package.json
@@ -19,11 +19,8 @@
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "clean": "rm -rf dist",
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "prepublishOnly": "npm run clean && npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kporras07/pantheon-secrets-js.git"
   },
   "keywords": [
     "pantheon",
@@ -31,10 +28,6 @@
   ],
   "author": "Pantheon Systems",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kporras07/pantheon-secrets-js/issues"
-  },
-  "homepage": "https://github.com/kporras07/pantheon-secrets-js#readme",
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^24.2.0",
