--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pantheon-systems/pantheon-secrets",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Pantheon Secrets for Node sites",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -18,6 +18,7 @@
     "build:esm": "tsc -p tsconfig.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "clean": "rm -rf dist",
+    "lint": "tsc --noEmit",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "prepublishOnly": "npm run clean && npm run build"
